Update GitHub button

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <p class="maliqkue">maliqkue</p>
 
         <img src="/images/githubpic.png" alt="GitHub Picture" class="pic">
+        <img src="/images/githubico.svg" alt="GitHub Icon" class="icon">
         <a href="https://github.com/maliqkue" target="_blank" class="github">github</a>
     </body>
 
