Add Discord button

--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
         <p class="maliqkue">maliqkue</p>
 
         <img src="/images/githubpic.png" alt="GitHub Picture" class="pic">
-        <img src="/images/githubico.svg" alt="GitHub Icon" class="icon">
+        <img src="/images/githubico.svg" alt="GitHub Icon" class="gitico">
+        <img src="/images/discordicon.png" alt="Discord Icon" class="discico">
         <a href="https://github.com/maliqkue" target="_blank" class="github">github</a>
+        <a href="https://rentry.co/oxdfx/raw" target="_blank" class="discord">discord</a>
     </body>
 
     <div class="learnlist">
