Add creations button & page

--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
         <img src="/images/githubpic.png" alt="GitHub Picture" class="pic">
         <img src="/images/githubico.svg" alt="GitHub Icon" class="gitico">
         <img src="/images/discordicon.png" alt="Discord Icon" class="discico">
+        <img src="/images/tools.png" alt="Tools Picture" class="toolico">
         <a href="https://github.com/maliqkue" target="_blank" class="github">github</a>
         <a href="https://rentry.co/oxdfx/raw" target="_blank" class="discord">discord</a>
+        <a href="/pages/creations.html" class="creations-">creations</a>
     </body>
 
     <div class="learnlist">
