--- a/pages/creations.html
+++ b/pages/creations.html
@@ -13,6 +13,14 @@
 
     <body>
 
+        <p class="maliqkue">maliqkue</p>
+
+        <a href="./form.html" class="form-">form</a>
+        <img src="../images/formicon.png" alt="Form Icon" class="formico">
+
+
+        <p class="learning two">creations</p>
+
         <a href="../index.html" class="home">home</a>
 
     </body>
