Update creations page

--- a/pages/creations.html
+++ b/pages/creations.html
@@ -15,7 +15,7 @@
 
         <p class="maliqkue">maliqkue</p>
 
-        <a href="./form.html" class="form-">form</a>
+        <a href="./form.html" class="form-">contact form</a>
         <img src="../images/formicon.png" alt="Form Icon" class="formico">
 
 
