Update form page

--- a/pages/form.html
+++ b/pages/form.html
@@ -7,13 +7,27 @@
         <meta charset="utf-8">
         <link rel="stylesheet" href="../styles.css">
 
-        <title>creations</title>
+        <title>form</title>
 
     </head>
 
     <body>
 
-        <p class="maliqkue">Form</p>
+        <p class="contactform">Contact Form</p>
+
+        <form class="form">
+
+            <p class="q1">Name *</p>
+            <input type="text" size="40" maxlength="30" autofocus required>
+            <p class="q2">Email *</p>
+            <input type="email" size="40" maxlength="70" required>
+            <p class="q3">Subject *</p>
+            <textarea class="sub" name="subject" cols="40" rows="8" required></textarea>
+            <input type="submit" class="submit">
+
+        </form>
+
+        <p class="required">boxes marked with * are required</p>
 
         <a href="../index.html" class="home">home</a>
 
